force-app/main/default/objects/CaseMeta__mdt/CaseMeta__mdt.object-meta.xml
<CustomObject>
    <label>CaseMeta</label>
    <pluralLabel>CasesMeta</pluralLabel>
</CustomObject>