force-app/main/default/objects/CaseMeta__mdt/fields/IdColaEspera__c.field-meta.xml
<CustomField>
    <fullName>IdColaEspera__c</fullName>
    <label>IdColaEspera</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>