force-app/main/default/objects/CaseMeta__mdt/fields/Motivo_de_cierre__c.field-meta.xml
<CustomField>
    <fullName>Motivo_de_cierre__c</fullName>
    <label>Motivo de cierre</label>
    <length>255</length>
    <type>Text</type>
</CustomField>