force-app/main/default/objects/CaseMeta__mdt/fields/NombreColaAsignacion__c.field-meta.xml
<CustomField>
    <fullName>NombreColaAsignacion__c</fullName>
    <label>NombreColaAsignacion</label>
    <length>50</length>
    <type>Text</type>
</CustomField>