force-app/main/default/objects/CaseMeta__mdt/fields/NombreColaEspera__c.field-meta.xml
<CustomField>
    <fullName>NombreColaEspera__c</fullName>
    <label>NombreColaEspera</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>