force-app/main/default/objects/CaseMeta__mdt/fields/TiempoEnEspera__c.field-meta.xml
<CustomField>
    <fullName>TiempoEnEspera__c</fullName>
    <label>TiempoEnEspera</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>